# bh3-duel-sim-next

./: AGENTS.md  main.py  pyproject.toml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
bh3_duel_sim/: __init__.py  logger.py  simulator.py  stats.py
bh3_duel_sim/characters/: AGENTS.md  __init__.py  base.py  placeholder.py  valkyries.py
bh3_duel_sim/characters/valkyries/: __init__.py  bianka.py  bronya.py  chenxue.py  kiana.py  korali.py  lita.py  theresa.py  vita.py
