[project]
name = "bh3-duel-sim-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 100
target-version = "py39"

# 开启常用规则集：E/F 是基础错误；I=imports；B=bugbear；UP=pyupgrade；SIM=简化；
# PL= Pylint 规则子集（减少你对 Pylint 的依赖）
[tool.ruff.lint]
select  = ["E", "F", "I", "B", "UP", "SIM", "PL"]
fixable = ["ALL"]  # 尽可能自动修复

[tool.ruff.format]
line-ending = "auto"

# 可在这里关掉你想交给 Pylint/团队例外的规则
# lint.ignore = ["PLR0915"]  # 示例：函数太长
